[tool.poetry]
name = "oge-helper"
version = "0.1.0"
description = ""
authors = ["xseniaKri <kseniaenta@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.116.1"}
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.4"
python-dotenv = "^1.1.1"
jinja2 = "^3.1.6"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
